--- a/docs/changelog/2023-02.md
+++ b/docs/changelog/2023-02.md
@@ -35,7 +35,7 @@ New Studio in Timesketch. First functionality is to edit Sigma rules.
 
 Ability to remove filter chips
 
-![Remove filter chips](../assets/images/removable_chip_filter.png)
+![Remove filter chips](../assets/images/removable_chip_filters.png)
 
 ## Enhance tsctl list-sigma-rules
 
@@ -57,4 +57,4 @@ tsctl list-sigma-rules --columns=rule_uuid,title,status | grep experimental | wc
 
 ### use a fixed id if crypto.randomUUID is not available (#2537)
 
-In Sigma Rule templates, the code still tried to generate a random UUID, this was causing problems if the connection to TImesketch was not in a HTTPS connection. This is being fixed now.
+In Sigma Rule templates, the code still tried to generate a random UUID, this was causing problems if the connection to Timesketch was not in a HTTPS connection. This is being fixed now.
